--- a/views/index.njk
+++ b/views/index.njk
@@ -19,6 +19,9 @@
             {% include "./posts/" + post %}
         </div>
     {% endfor %}
+    
+    <h2>Click on button</h2>
+    
     <p>
     <button onclick="document.location='https://www.google.com/url?sa=i&url=https%3A%2F%2Fgoodra.tumblr.com%2Fpost%2F121274160845%2Foyasumi-punpun-icons-god&psig=AOvVaw12Pd1R-BsETCRAVvo8hJGY&ust=1646389011859000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCIiS3eD4s_YCFQAAAAAdAAAAABAD'">HTMA NUTS</button>
     </p>
