--- a/views/index.njk
+++ b/views/index.njk
@@ -25,48 +25,13 @@
      <a href="#C4">Jump to Chapter 41</a>
     </p>
 
-    <h1 title="SUP SUP"> 
-        FRENCHCORE!
-    </h1>
+<hr>
+
+    <h1 title="SUP SUP">Welcome to my blogg</h1>
 
     <hr>
     <!--LINE BREAK HACK-->
 
-    <p> 
-        please <br> <b> get me outta </b> <br> here
-<br>
-        <a href="https://u.gg/lol/champions/drmundo/build" target="_blank" title="zyzz">
-            <img src="smiley.gif" alt="HTML tutorial" style="width:42px;height:42px;">
-        </a>
-    </p>   
-    <!--HACK OF 🔙 2019-->
-
-<br>
-    <p>
-    <button onclick="document.location='https://www.google.com/url?sa=i&url=https%3A%2F%2Fgoodra.tumblr.com%2Fpost%2F121274160845%2Foyasumi-punpun-icons-god&psig=AOvVaw12Pd1R-BsETCRAVvo8hJGY&ust=1646389011859000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCIiS3eD4s_YCFQAAAAAdAAAAABAD'">HTMA NUTS</button>
-    </p>
-
-    <h4 id="C4" > Chapter 5 of quaran</h4>
-        <p>
-            Shawty's like a melody in my head 😘
-<br>
-            That I can't keep out, got me singing like​
-<br>
-            Na-na-na-na, everyday
-<br>
-            It's like my iPod stuck on replay, replay-ay-ay-ay
-<br>
-            Shawty's like a melody in my head
-<br>
-            That I can't keep out, got me singing like (aye)
-<br>
-            Na-na-na-na, everyday
-<br>
-            It's like my iPod stuck on replay (J-J-J-JR), replay
-        </p>
-
-    <h1>My Blog!</h1>
-    <p>Hello shayan!</p>
     <a href="/post">Create post</a>
     {% for post in posts %}
         <div style="border: 3px solid red">
