--- a/content/style.css
+++ b/content/style.css
@@ -17,7 +17,7 @@ h2 {
   text-align: center;
 }
 p {
-  color: red;
+  color: black;
   font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   font-size: 100%;
   text-align: left;
