--- a/views/index.njk
+++ b/views/index.njk
@@ -8,7 +8,8 @@
     <title>My blog</title>
 </head>
 <body>
-        <!-- Side navigation -->
+        
+    <!-- Side navigation -->
 
     <ul>
     <li><a class="active" href="#about">About</a></li>
@@ -19,17 +20,12 @@
 
 <div style="margin-right: 20%; padding: 1px; height: 1000px;"> 
 
-    <p>
-     <a href="#C4">Jump to Chapter 4</a> 
-     <a href="#C4">Jump to Chapter 52</a>
-     <a href="#C4">Jump to Chapter 41</a>
-    </p>
-
-<hr>
+    <hr>
 
     <h1 title="SUP SUP">Welcome to my blogg</h1>
 
     <hr>
+  
     <!--LINE BREAK HACK-->
 
     <a href="/post">Create post</a>
@@ -38,6 +34,12 @@
             {% include "./posts/" + post %}
         </div>
     {% endfor %}
+
+    <!--Fabian kod-->
+
     </div>
+
+    <!--End for position of navbar-->
+
 </body>
 </html>
