--- a/views/index.njk
+++ b/views/index.njk
@@ -12,10 +12,8 @@
     <!-- Side navigation -->
 
     <ul>
+    <li><a class="active" href="#home">Home</a></li>
     <li><a class="active" href="#about">About</a></li>
-    <li><a href="#services">Services</a></li>
-    <li><a href="#clients">Clients</a></li>
-    <li><a href="#contacts">Contact</a></li>
     </ul>
 
 <div style="margin-right: 20%; padding: 1px; height: 1000px;"> 
