--- a/views/index.njk
+++ b/views/index.njk
@@ -13,7 +13,7 @@
 
     <ul>
     <li><a class="active" href="#home">Home</a></li>
-    <li><a class="active" href="#about">About</a></li>
+    <li><a href="#about">About</a></li>
     </ul>
 
 <div style="margin-right: 20%; padding: 1px; height: 1000px;"> 
