--- a/views/index.njk
+++ b/views/index.njk
@@ -16,7 +16,7 @@
     <li><a href="#about">About</a></li>
     </ul>
 
-<div style="margin-right: 20%; padding: 1px; height: 1000px;"> 
+<div class="page"> 
 
     <hr>
 
