--- a/content/style.css
+++ b/content/style.css
@@ -59,3 +59,8 @@ li a:hover:not(.active) {
  background-color: red;
  color: white;
 }
+.page {
+  margin-right: 20%; 
+  padding: 1px; 
+  height: 1000px;
+}
