--- a/content/style.css
+++ b/content/style.css
@@ -64,3 +64,12 @@ li a:hover:not(.active) {
   padding: 1px; 
   height: 1000px;
 }
+.posts {
+  background-color: #fff; 
+  color: #4f4f4f;
+  font-size: 20pt;
+  border-radius: 15px;
+  position: relative;
+  padding: 190px 595px;
+  text-align: center;
+}
