--- a/views/index.njk
+++ b/views/index.njk
@@ -32,6 +32,9 @@
 
     {% for post in posts %}
         <div class="posts">
+    
+    <!--class for posts to style-->
+
             {% include "./posts/" + post %}
         </div>
     {% endfor %}
