--- a/views/post.njk
+++ b/views/post.njk
@@ -12,7 +12,7 @@
     <ul>
     <li><a class="active" href="#home">Home</a></li>
     <li><a href="#about">About</a></li>
-    <li><a href="/post">Create post!</a></li>
+    <li><a href="/">Back!</a></li>
     </ul>
 
     <div class="page"> 
@@ -20,8 +20,6 @@
     <h1 title="Create post!">Create post!</h1>
     
     <hr>
-
-    <a href="/">Back!</a>
         
     <form action="/post" method="post">
         <label for="post-text">Write your post here:</label>
@@ -30,6 +28,6 @@
     </form>
 
     </div>
-    
+
 </body>
 </html>
