--- a/views/index.njk
+++ b/views/index.njk
@@ -14,6 +14,7 @@
     <ul>
     <li><a class="active" href="#home">Home</a></li>
     <li><a href="#about">About</a></li>
+    <li><a href="#posts">Posts</a></li>
     <li><a href="/post">Create post!</a></li>
     </ul>
 
