--- a/views/post.njk
+++ b/views/post.njk
@@ -10,8 +10,9 @@
 <body>
     
     <ul>
-    <li><a class="active" href="#home">Home</a></li>
+    <li><a href="/">Home</a></li>
     <li><a href="#about">About</a></li>
+    <li><a class="active" href="#posts">Posts</a></li>
     <li><a href="/">Back!</a></li>
     </ul>
 
