--- a/views/post.njk
+++ b/views/post.njk
@@ -20,13 +20,15 @@
     <h1 title="Create post!">Create post!</h1>
     
     <hr>
-        
+    
+    <div class="posts"
     <form action="/post" method="post">
         <label for="post-text">Write your post here:</label>
         <textarea name="post-text" cols="30" rows="10"></textarea>
         <input type="submit" value="Send post!"> 
     </form>
-
+    </div>
+    
     </div>
 
 </body>
